--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,16 @@ dependencies {
 
 
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoVersion", {
-        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'support-annotations'
     })
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+    testCompile 'com.android.support:support-annotations:25.1.0'
+
     testCompile "com.android.support.test:runner:$runnerVersion"
     testCompile "com.android.support.test:rules:$runnerVersion"
+
+    androidTestCompile "com.android.support.test:runner:$runnerVersion"
+    androidTestCompile "com.android.support.test:rules:$runnerVersion"
     androidTestCompile "com.android.support:appcompat-v7:$supportLibraryVersion"
     androidTestCompile "com.android.support:cardview-v7:$supportLibraryVersion"
     androidTestCompile "com.android.support:design:$supportLibraryVersion"
