--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,15 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    lintOptions {
+        abortOnError false
+    }
     defaultConfig {
         applicationId "io.github.dmi3coder.moviemo"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -40,10 +42,6 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:support-v4:$supportLibraryVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-
-    compile "com.google.dagger:dagger-compiler:$daggerVersion"
-    compile "com.google.dagger:dagger:$daggerVersion"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
 
 }
 
