--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".description.DescriptionActivity"/>
+        <activity android:theme="@style/Theme.AppCompat.Light.Dialog.MinWidth" android:name=".description.DescriptionActivity"/>
     </application>
 
 </manifest>
