--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.github.dmi3coder.moviemo" >
+    package="io.github.dmi3coder.moviedom" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:name=".Moviemo"
+        android:name="io.github.dmi3coder.moviedom.Moviemo"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".movies.MovieActivity" >
+        <activity android:name="io.github.dmi3coder.moviedom.movies.MovieActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:theme="@style/Theme.AppCompat.Light.Dialog.MinWidth" android:name=".description.DescriptionActivity"/>
+        <activity android:theme="@style/Theme.AppCompat.Light.Dialog.MinWidth" android:name="io.github.dmi3coder.moviedom.description.DescriptionActivity"/>
     </application>
 
 </manifest>
